--- a/two-to-one/index.html
+++ b/two-to-one/index.html
@@ -10,8 +10,13 @@
 
 <body>
     <script>
-        function longest(s1, s2) {
+        /* function longest(s1, s2) {
             return (s1 + s2).split('').filter((item, index, arr) => arr.indexOf(item) === index).sort().join('');
+        } */
+
+        function longest(s1, s2) {
+            const string = s1 + s2;
+            return [...new Set(string)].sort().join('')
         }
 
         console.log(longest("aretheyhere", "yestheyarehere"), "aehrsty")
