--- a/sort-the-odd/index.html
+++ b/sort-the-odd/index.html
@@ -11,7 +11,12 @@
 <body>
     <script>
         function sortArray(array) {
-            // Return a sorted array.
+            const odds = array
+                .filter(x => x % 2)
+                .sort((a, b) => a - b);
+
+            return array
+                .map(x => x % 2 ? odds.shift() : x);
         }
 
         console.log(sortArray([5, 3, 2, 8, 1, 4]), [1, 3, 2, 8, 5, 4]);
