--- a/replace-with-alphabet-position/index.html
+++ b/replace-with-alphabet-position/index.html
@@ -11,11 +11,16 @@
 <body>
     <script>
         function alphabetPosition(text) {
-            return text;
+            if (text.length < 1) return ''
+            let alphabet = ['a','b','c','d','e','f','g','h','i','j','k','l','m','n','o','p','q','r','s','t','u','v','w','x','y','z'];
+            return text.toLowerCase().match(/[a-z]/g)?.map((item, index) => alphabet.indexOf(item) + 1).join(' ') || '';
         }
 
         console.log(alphabetPosition("The sunset sets at twelve o' clock."), "20 8 5 19 21 14 19 5 20 19 5 20 19 1 20 20 23 5 12 22 5 15 3 12 15 3 11");
         console.log(alphabetPosition("The narwhal bacons at midnight."), "20 8 5 14 1 18 23 8 1 12 2 1 3 15 14 19 1 20 13 9 4 14 9 7 8 20");
+        console.log(alphabetPosition("9)s03jm)"), "19 10 13");
+        console.log(alphabetPosition("-zp(w6+^"), '26 16 23');
+        console.log(alphabetPosition('8&:]=)^|'), '');
     </script>
 </body>
 
