feat: complete task Build a pile of cubes

--- a/build-a-pile-of-cubes/index.html
+++ b/build-a-pile-of-cubes/index.html
@@ -11,14 +11,23 @@
 <body>
     <script>
         function findNb(m) {
-            // your code
-            return (-1);
+            let n = 0;
+            let mm = 0;
+
+            while(mm < m) {
+                n+=1;
+                mm = mm + Math.pow(n, 3)
+            }
+
+            if (mm == m) return n;
+            return -1
         }
-        
-        console.log(findNb(4183059834009), 2022)
-        console.log(findNb(24723578342962), -1)
-        console.log(findNb(135440716410000), 4824)
-        console.log(findNb(40539911473216), 3568)
+
+        console.log(findNb(1071225), 45);
+        //console.log(findNb(4183059834009), 2022)
+        //console.log(findNb(24723578342962), -1)
+        //console.log(findNb(135440716410000), 4824)
+        //console.log(findNb(40539911473216), 3568)
     </script>
 </body>
 
